--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: List files for debugging
+        run: ls -R
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
